# TorchNexusAgent

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config.example.yaml
.github/workflows/: ci.yml
apps/android/: settings.gradle.kts
apps/android/app/: build.gradle.kts  proguard-rules.pro
apps/android/app/src/main/: AndroidManifest.xml
apps/android/app/src/main/java/com/torchnexus/agent/: AgentSettings.kt  MainActivity.kt  TorchNexusVpnService.kt
apps/android/app/src/main/java/com/torchnexus/agent/rust/: torchnexus_mobile_engine.kt
apps/android/app/src/main/res/values/: styles.xml
apps/android/app/src/test/java/com/torchnexus/agent/: VpnRoutingPolicyTest.kt
apps/ios/: project.yml
apps/ios/TorchNexusAgent/: TorchNexusAgentApp.swift
apps/ios/TorchNexusTunnel/: Info.plist  PacketTunnelProvider.swift
crates/app-cli/: Cargo.toml
crates/app-cli/src/: main.rs  session_index.rs
crates/app-cli/tests/: cli.rs  run_socks5.rs  run_tcp.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  filter.rs  lib.rs  session.rs  shutdown.rs
crates/mobile-engine/: Cargo.toml  build.rs  uniffi.toml
crates/mobile-engine/src/: lib.rs  torchnexus_mobile_engine.udl
crates/proxy-http/: Cargo.toml
crates/proxy-http/src/: handler.rs  server.rs
crates/proxy-socks5/: Cargo.toml  build.rs
crates/proxy-socks5/src/: handler.rs  server.rs
crates/proxy-socks5/tests/: socks5.rs
crates/proxy-tcp/: Cargo.toml
crates/proxy-tcp/src/: context.rs  forward.rs  lib.rs  server.rs
crates/proxy-tcp/tests/: tcp_forward.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
crates/runtime/tests/: runtime.rs
crates/storage-support/: Cargo.toml  build.rs
crates/storage-support/src/: direction.rs  lib.rs  metadata.rs  recorder.rs  test_support.rs
crates/uploader/: Cargo.toml
crates/uploader/src/: client.rs  queue.rs
docs/: android.md  ios.md
libs/aarch64-linux-android/: manifest.json
libs/aarch64-unknown-linux-gnu/: manifest.json
libs/x86_64-linux-android/: manifest.json
libs/x86_64-pc-windows-msvc/: manifest.json  torchnexus_agent_storage.h
libs/x86_64-unknown-linux-gnu/: manifest.json
scripts/mobile/: build-android.ps1  build-android.sh  build-ios.sh
