[workspace]
members = [
  "crates/core",
  "crates/storage-support",
  "crates/proxy-tcp",
  "crates/proxy-socks5",
  "crates/proxy-http",
  "crates/uploader",
  "crates/runtime",
  "crates/mobile-engine",
  "crates/app-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

# Cargo 只读取工作区根目录的 profile 配置。
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
predicates = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
uniffi = "0.32"
walkdir = "2"
zip = "2"
zstd = "0.13"
assert_cmd = "2"
