[package]
name = "torchnexus-proxy-http"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
tokio.workspace = true
tracing.workspace = true
torchnexus-core = { path = "../core" }
torchnexus-proxy-tcp = { path = "../proxy-tcp" }
torchnexus-uploader = { path = "../uploader" }

[dev-dependencies]
tempfile.workspace = true
torchnexus-storage-support = { path = "../storage-support" }
