[package]
name = "torchnexus-proxy-socks5"
version = "0.1.0"
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
socks5-proto = "0.4.1"
tokio.workspace = true
tracing.workspace = true
torchnexus-core = { path = "../core" }
torchnexus-proxy-tcp = { path = "../proxy-tcp" }
torchnexus-storage-support = { path = "../storage-support" }
torchnexus-uploader = { path = "../uploader" }
