[package]
name = "torchnexus-proxy-tcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
torchnexus-core = { path = "../core" }
torchnexus-storage-support = { path = "../storage-support" }
torchnexus-uploader = { path = "../uploader" }
