[package]
name = "torchnexus-storage-support"
version = "0.1.0"
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
zstd.workspace = true

[dev-dependencies]
tempfile.workspace = true
