[package]
name = "torchnexus-uploader"
version = "0.1.0"
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
hex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
zstd.workspace = true
torchnexus-core = { path = "../core" }
torchnexus-storage-support = { path = "../storage-support" }

[dev-dependencies]
tempfile.workspace = true
